# UniFi

./: .env  .env.example  README.md  get_chat_id.py  pyproject.toml  requirements.txt  test_all.py  test_send.py
.github/workflows/: autonomous-agent.yml  monitor-check.yml  monitor.yml  test.yml
src/: __init__.py  actions.py  agent.py  config.py  llm_client.py  main.py  memory.py  n8n_client.py  notifier.py  telegram_bot.py  unifi_client.py
tests/: __init__.py  test_agent.py  test_main.py
